package SGG.Command;

public class RemoteController {
}
